recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:2: error: missing arguments for method isMember in class isMember;
follow this method with `_' if you want to treat it as a partially applied function
  if(isMember == Nil){
     ^isMember:9: error: method head of type Int does not take type parameters.
    else{isMember(l.head[Int], v:Int)}
                        ^