recursion.cons.lessons.recursion.cons.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  if(isMember == Nil){
    return false
  }
  else{
    if (l.head==v){
      return true
    }
    else{isMember(l.head[Int], v:Int)}
  }
}